--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -115,3 +115,6 @@ ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_BFF_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_BFF_event_2_contexts.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_SET_IRREVERSIBLE_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_SET_IRREVERSIBLE_event_2_contexts.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_attach.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_attach_negative.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/app_context_detach.sql )
