--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ hive_fork:
     - cmake ../..
     - make extension.hive_fork
     - make install
-    - ctest --debug -R test.functional.hive_fork.*
+    - ctest --output-on-failure  -R test.functional.hive_fork.*
   tags:
     - public-runner-docker
 
@@ -27,6 +27,6 @@ c++_unit_tests:
     - cd "$CI_JOB_NAME"/build
     - cmake ../..
     - make
-    - ctest --debug -R test.unit.*
+    - ctest --output-on-failure -R test.unit.*
   tags:
     - public-runner-docker
