--- a/tests/integration/functional/hive_fork/CMakeLists.txt
+++ b/tests/integration/functional/hive_fork/CMakeLists.txt
@@ -109,9 +109,13 @@ ADD_SQL_FUNCTIONAL_TESTS( hived_api/set_irreversible_cleaning_events_test.sql )
 
 ADD_SQL_FUNCTIONAL_TESTS( app_api/create_context_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_blocks_view_nonforking_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_transactions_view_non_forking_app_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_signatures_view_non_forking_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_test.sql )
+ADD_SQL_FUNCTIONAL_TESTS( app_api/context_operations_view_non_forking_test.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_negative.sql )
 ADD_SQL_FUNCTIONAL_TESTS( app_api/app_next_block_process_new_block_event_2_contexts.sql )
