--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -396,10 +396,8 @@ hafah_pytest_fuctional_tests:
     DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
     HAFAH_IMAGE_NAME: $CI_REGISTRY_IMAGE/instance:instance-$HAFAH_IMAGE_TAG
   script:
-    - hostname -I
-    - curl -fsSL https://get.docker.com -o get-docker.sh
-    - sudo sh get-docker.sh
-    - dockerd-rootless-setuptool.sh install
+    - sudo apt-get update
+    - sudo apt-get install docker.io
     - docker context ls
     - ls -la
     - cd /builds/hive/HAfAH
