--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -396,8 +396,8 @@ hafah_pytest_fuctional_tests:
     DB_URL: "postgresql://haf_admin@hfm-only-instance:5432/$DB_NAME"
     HAFAH_IMAGE_NAME: $CI_REGISTRY_IMAGE/instance:instance-$HAFAH_IMAGE_TAG
   script:
-    - wget https://download.docker.com/linux/ubuntu/dists/jammy/pool/stable/amd64/docker-ce-cli_24.0.4-1~ubuntu.22.04~jammy_amd64.deb
-    - sudo dpkg -i docker-ce-cli_24.0.4-1\~ubuntu.22.04\~jammy_amd64.deb
+    - sudo apt-get update
+    - sudo apt-get install -y docker.io
     - docker context ls
     - ls -la
     - cd /builds/hive/HAfAH
